package fathomcloud.protobuf;

option java_package="io.fathom.cloud.protobuf";

import "CloudCommons.proto";

message BucketAttributes {
	optional string acl_read = 1;
}

message BucketData {
	optional string key = 1;
	
	optional uint64 root_id = 2;
	
	optional uint64 created_at = 3;
	
	optional BucketAttributes bucket_attributes = 8;
	optional Attributes attributes = 9;
}

message FileData {
	optional string key = 1;
	
	//optional bytes contents = 2;
	
	optional uint64 length = 3;
	optional bytes hash = 4;
	optional string content_type = 5;
	
	optional int64 last_modified = 6;
	
	repeated FileRange ranges = 7;

	optional bytes hash_resume = 8;

	optional Attributes attributes = 9;
}

message FileRange {
	optional uint64 start = 1;
	optional uint64 end = 2;
	optional bytes content_key = 3;
}

message DirectoryData {
	optional uint64 id = 1;
	repeated FileData files = 2;
}

message ChunkData {
	optional uint64 offset = 1;
}

